Home Controller changes

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,25 @@
 }
 
 <div class="text-center" style="padding-top: 100px">
-    <h1 class="display-4">Welcome to your Customer Portal</h1>
+    <h1 class="display-4">Welcome to the Rocket Elevators Portal</h1>
     <p></p>
+</div>
+
+<div class="container" style="padding-top: 100px; text-align: center">
+    <div class="row">
+        <div class="col-md-12">
+            <button class="btn btn-primary btn-lg btn-block" id="" onclick="location.href='@Url.Action("Products", "Home")';return false;">MY PRODUCTS</button>
+            <br /><br />
+        </div>
+        <br />
+        <div class="col-md-12">
+            <button class="btn btn-primary btn-lg btn-block" id="" onclick="location.href='@Url.Action("Intervention", "Home")';return false;">REQUEST INTERVENTION</button>
+            <br /><br />
+        </div>
+        <br />
+        <div class="col-md-12">
+            <button class="btn btn-primary btn-lg btn-block" id="" onclick="location.href='@Url.Action("UpdateCustomer", "Home")';return false;">UPDATE MY INFO</button>
+            <br /><br />
+        </div>
+    </div>
 </div>
