Update Customer Form working - needs fine tuning

--- a/Views/Home/Products.cshtml
+++ b/Views/Home/Products.cshtml
@@ -2,7 +2,8 @@
     ViewData["Title"] = "My Products";
 }
 
-<div class="text-center" style="padding-top: 100px">
-    <h1 class="display-4">View information about your Rocket Elevators products</h1>
+<div class="text-center">
+    <br />
+    <h6 class="display-4">View information about your Rocket Elevators products</h6>
     <p></p>
 </div>
