--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center" style="padding-top: 100px">
-    <h1 class="display-4">Welcome to the Rocket Elevators Portal</h1>
+    <h1 class="display-4">Welcome to your Rocket Elevators Customer Portal</h1>
     <p></p>
 </div>
 
@@ -20,7 +20,7 @@
         </div>
         <br />
         <div class="col-md-12">
-            <button class="btn btn-primary btn-lg btn-block" id="" onclick="location.href='@Url.Action("UpdateCustomer", "Home")';return false;">UPDATE MY INFO</button>
+            <button class="btn btn-primary btn-lg btn-block" id="" onclick="location.href='@Url.Action("UpdateCompanyInfo", "Home")';return false;">UPDATE COMPANY INFO</button>
             <br /><br />
         </div>
     </div>
