--- a/Views/Home/Intervention.cshtml
+++ b/Views/Home/Intervention.cshtml
@@ -2,7 +2,8 @@
     ViewData["Title"] = "Request Intervention";
 }
 
-<div class="text-center" style="padding-top: 100px">
-    <h1 class="display-4">Intervention Request Form</h1>
+<div class="text-center">
+    <br />
+    <h6 class="display-4">Intervention Request Form</h6>
     <p></p>
 </div>
