--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center" style="padding-top: 100px">
-    <h1 class="display-4">Welcome to your Rocket Elevators Customer Portal</h1>
+    <h1 class="display-4">Rocket Elevators Customer Portal</h1>
     <p></p>
 </div>
 
