--- a/Views/Home/UpdateCompanyInfo.cshtml
+++ b/Views/Home/UpdateCompanyInfo.cshtml
@@ -4,20 +4,19 @@
 
 <script src="~/js/jquery-3.5.1.min.js"></script>
 <div class="text-center">
-    <h1 class="display-4">Update Company Info</h1>
+    <h1 class="display-4">Update Contact Info</h1>
     <p></p>
 </div>
 <script>
     function updateCustomer() {
         var data = {
             CompanyName: $('#company_name').val(),
-            FullNameOfCompanyContact: $('#cpy_contact_name').val(),
-            CompanyContactPhone: $('#cpy_contact_phone').val(),
-            FullNameOfServiceTechnicalAuthority: $('#sta_name').val(),
-            TechnicalAuthorityPhoneForService: $('#sta_phone').val(),
-            TechnicalManagerEmailForService: $('#sta_mail').val(),
-            CompanyDescription: $('#cpy_description').val(),
-            EmailOfCompanyContact: $('#cpy_contact_email').val()
+            CompanyDescription: $('#description').val(),
+            FullNameOfCompanyContact: $('#contact_name').val(),
+            CompanyContactPhone: $('#contact_phone').val(),
+            FullNameOfServiceTechnicalAuthority: $('#tech_name').val(),
+            TechnicalAuthorityPhoneForService: $('#tech_phone').val(),
+            TechnicalManagerEmailForService: $('#tech_mail').val()
         };
 
         $.ajax({
@@ -32,7 +31,7 @@
                 'Content-Type': 'application/json'
             },
             success: function (result) {
-                alert('Customer updated successfully!');
+                alert('Successfully Updated Information');
                 return false;
             }
         });
@@ -41,10 +40,10 @@
     }
 </script>
 
-<form action="" onsubmit="return updateCustomer();" id="customerForm">
-    <div id="quote_form" class="container">
+<form onsubmit="return updateCustomer();" id="customerForm">
+    <div class="container">
         <div class="row">
-            <div id="typeChoice" class="col-md-12 form-group">
+            <div id="typeChoice" class="col-md-8 form-group">
 
                 <script>
                     let customer = JSON.parse('@Html.Raw(Json.Serialize(ViewBag.customer))');
@@ -53,37 +52,37 @@
 
 
                 <label for="company_name">Company Name</label>
-                <input required type="text" value="@ViewBag.customer.CompanyName" class="form-control" name="company_name" id="company_name">
+                <input required type="text" value="@ViewBag.customer.CompanyName" class="form-control" name="company_name" id="company_name" readonly disabled>
                 <br />
 
                 
-                <label for="cpy_description">Company Description</label>
-                <input required type="text" value="@ViewBag.customer.CompanyDescription" class="form-control" name="cpy_description" id="cpy_description">
+                <label for="description">Company Description</label>
+                <input required type="text" value="@ViewBag.customer.CompanyDescription" class="form-control" name="description" id="description">
                 <br />
 
 
-                <label for="cpy_contact_name">Full Name Of Company Contact</label>
-                <input required type="text" value="@ViewBag.customer.FullNameOfCompanyContact" class="form-control" name="cpy_contact_name" id="cpy_contact_name">
+                <label for="contact_name">Full Name Of Company Contact</label>
+                <input required type="text" value="@ViewBag.customer.FullNameOfCompanyContact" class="form-control" name="contact_name" id="contact_name">
                 <br />
 
 
-                <label for="cpy_contact_phone">Company Contact Phone Number</label>
-                <input required type="text" value="@ViewBag.customer.CompanyContactPhone" class="form-control" name="cpy_contact_phone" id="cpy_contact_phone">
+                <label for="contact_phone">Company Contact Phone Number</label>
+                <input required type="text" value="@ViewBag.customer.CompanyContactPhone" class="form-control" name="contact_phone" id="contact_phone">
                 <br />
 
 
-                <label for="sta_name">Full Name Of Technical/Service Contact</label>
-                <input required type="text" value="@ViewBag.customer.FullNameOfServiceTechnicalAuthority" class="form-control" name="sta_name" id="sta_name">
+                <label for="tech_name">Full Name Of Technical/Service Contact</label>
+                <input required type="text" value="@ViewBag.customer.FullNameOfServiceTechnicalAuthority" class="form-control" name="tech_name" id="tech_name">
                 <br />
 
 
-                <label for="sta_phone">Technical/Service Phone Number</label>
-                <input required type="text" value="@ViewBag.customer.TechnicalAuthorityPhoneForService" class="form-control" name="sta_phone" id="sta_phone">
+                <label for="tech_phone">Technical/Service Phone Number</label>
+                <input required type="text" value="@ViewBag.customer.TechnicalAuthorityPhoneForService" class="form-control" name="tech_phone" id="tech_phone">
                 <br />
 
 
-                <label for="sta_mail">Technical/Service Email</label>
-                <input required type="text" value="@ViewBag.customer.TechnicalManagerEmailForService" class="form-control" name="sta_mail" id="sta_mail">
+                <label for="tech_mail">Technical/Service Email</label>
+                <input required type="text" value="@ViewBag.customer.TechnicalManagerEmailForService" class="form-control" name="tech_mail" id="tech_mail">
                 <br />
 
                 <div class="row">
